# pro-nlp-finalproject-nlp-14

./: .env.dev.example  .env.prod.example  .gitignore  CLAUDE-activeContext.md  CLAUDE-decisions.md  CLAUDE-patterns.md  CLAUDE-troubleshooting.md  CLAUDE.md  LLM_IMPLEMENTATION_SUMMARY.md  MIT_SEARCH_CLEANUP_REPORT.md  MIT_SEARCH_IMPLEMENTATION_REPORT.md  MIT_SEARCH_LLM_IMPLEMENTATION.md  MIT_SEARCH_P0_FIXES.md  Makefile  ORCHESTRATION_MEMORY_FIX.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml
backend/: .dockerignore  .env.example  .env.test  CLAUDE-activeContext.md  CLAUDE-decisions.md  CLAUDE-patterns.md  CLAUDE-troubleshooting.md  Dockerfile  alembic.ini  coverage.xml  debug_neo4j.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0430fae21780_add_transcripts_table.py  380b5e65ed84_add_chat_messages_table.py  485a5c552d13_add_meeting_recordings_table.py  56401abb2fd4_add_vad_segments_to_meeting_recordings.py  738f30c0e1d2_.py  8bd8006e1cab_add_teams_and_meetings_tables.py  8d812817ec16_merge_heads.py  92d8ef67794d_create_users_table.py  a1b2c3d4e5f6_add_transcript_fields.py  a568e7cad9bd_add_meeting_start_and_meeting_end_to_.py  b2c3d4e5f6g7_add_transcript_file_path.py  c3d4e5f6g7h8_fix_recording_status.py  d4e5f6g7h8i9_reset_transcription_failed.py  dd0576869e44_add_agent_user_and_transcript_status.py  e5f6g7h8i9j0_add_user_activity_logs.py  f117a74dad34_drop_hashed_password_column.py  fa12da308ae8_make_recording_user_id_nullable_for_.py
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: router.py
backend/app/constants/: __init__.py  agents.py
backend/app/core/: config.py  constants.py  database.py  neo4j.py  neo4j_sync.py  redis.py  security.py  storage.py  telemetry.py  topic_pubsub.py  webrtc_config.py
backend/app/handlers/: __init__.py  websocket_message_handlers.py
backend/app/infrastructure/: __init__.py
backend/app/infrastructure/agent/: __init__.py  llm_client.py
backend/app/infrastructure/cache/: __init__.py  semantic_cache.py
backend/app/infrastructure/context/: __init__.py  builder.py  config.py  embedding.py  manager.py  models.py  run_test.py  runtime.py  speaker_context.py  topic_detector.py
backend/app/infrastructure/graph/: __init__.py  checkpointer.py  config.py  deps.py  main.py  spotlight_checkpointer.py
backend/app/infrastructure/neo4j/: __init__.py  config.py  deps.py  interfaces.py
backend/app/infrastructure/streaming/: __init__.py  event_stream_manager.py  response_stream.py
backend/app/infrastructure/worker_manager/: __init__.py  base.py  docker.py  kubernetes.py
backend/app/models/: __init__.py  chat.py  meeting.py  recording.py  team.py  transcript.py  transcript_.py  user.py  user_activity_log.py
backend/app/models/kg/: __init__.py  action_item.py  agenda.py  comment.py  decision.py  meeting.py  minutes.py  suggestion.py  team.py  user.py
backend/app/prompt/: __init__.py
backend/app/prompt/v1/: __init__.py
backend/app/prompts/: __init__.py
backend/app/prompts/v1/: __init__.py
backend/app/repositories/: __init__.py
backend/app/repositories/kg/: __init__.py  interface.py  mock_repository.py  repository.py  sync_repository.py
backend/app/schemas/: __init__.py  action_item.py  agenda.py  auth.py  comment.py  common.py  common_brief.py  context.py  invite_link.py  meeting.py  meeting_participant.py  minutes.py  recording.py  review.py  spotlight.py  suggestion.py  team.py  team_member.py  transcript.py  transcript_.py  webrtc.py
backend/app/services/: agenda_matcher.py  agent_service.py  audio_preprocessor.py  auth_service.py  chat_service.py  clova_key_manager.py  context_runtime.py  invite_link_service.py  livekit_service.py  meeting_participant_service.py  meeting_service.py  minutes_events.py  minutes_service.py  recording_service.py  review_service.py  sfu_service.py  signaling_service.py  spotlight_agent_service.py  spotlight_session.py  stt_service.py  team_member_service.py  team_service.py  transcript_service.py  transcript_service_.py  vad_event_service.py
backend/app/services/auth/: __init__.py  auth_service.py  google_oauth_service.py  guest_auth_service.py  naver_oauth_service.py
backend/app/services/stt/: __init__.py  base.py  factory.py  openai_provider.py
backend/app/services/webrtc/: __init__.py  recording_connection.py  recording_persistence.py
backend/app/utils/: ice_parser.py
backend/app/workers/: __init__.py  arq_worker.py  run_worker.py
backend/app/workers/tasks/: __init__.py
backend/graph/: main.py
backend/graph/integration/: llm.py
backend/graph/orchestrator/: state.py
backend/graph/orchestrator/nodes/: generate_response.py  mit_tools_response.py  planning.py  tool_call.py
backend/neo4j/: constraints.cypher  indexes.cypher  init_schema.py
backend/notebook/: rubric.md
backend/scripts/: build_generate_pr_dataset.py  build_meeting_vectors.py  create_slack_test.py  debug_context_flow.py  evaluate_pr.py  fix_recording_status.py  generate_pr_for_evaluation.py  sync_all_to_neo4j.py  test_arrow_fix.py
backend/seeds/: neo4j_seed.py  seed_neo4j.py
backend/tests/: conftest.py  test_cypher_generation_fix.py
backend/tests/integration/api/: test_meetings.py  test_recordings.py  test_webrtc.py
backend/tests/unit/api/: test_invite_links.py  test_livekit_webhooks.py
backend/tests/unit/core/: test_config.py  test_storage_service.py
backend/tests/unit/handlers/: test_chat_message_handler.py  test_websocket_handlers.py
backend/tests/unit/infrastructure/: test_context_manager.py
backend/tests/unit/services/: test_agenda_matcher.py  test_approval_gateway.py  test_auth_service.py  test_chat_service.py  test_clova_key_manager.py  test_invite_link_service.py  test_livekit_service.py  test_meeting_service.py  test_recording_service.py  test_review_service.py  test_transcript_service.py
backend/tests/unit/utils/: test_ice_parser.py
backend/worker/: .dockerignore  .env.example  .gitignore  Dockerfile  __init__.py  pyproject.toml
backend/worker/src/: __init__.py  config.py  livekit.py  main.py  telemetry.py
(+577 files in other folders)
