[project]
name = "mit-backend"
version = "0.1.0"
description = "Mit Backend API"
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # Redis
    "redis>=5.2.0",
    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    # Settings & Validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "email-validator>=2.2.0",
    # Misc
    "python-multipart>=0.0.20",
    # Object Storage
    "minio>=7.2.0",
    # LiveKit (SFU)
    "livekit-api>=0.7.0",
    # STT (Speech-to-Text)
    "openai>=1.0.0",
    "arq>=0.26.0",
    "webrtcvad>=2.0.10",
    "pydub>=0.25.1",
    # webrtcvad requires pkg_resources from setuptools
    "setuptools>=70.0.0",
    "datetime>=6.0",
    "langgraph>=1.0.6",
    "typing>=3.10.0.0",
    "logging>=0.4.9.6",
    "langchain-core>=1.2.7",
    "langchain>=1.2.6",
    "dotenv>=0.9.9",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.7",
    "neo4j>=6.1.0",
    "transformers==4.46.2",
    "peft==0.12.0",
    "flagembedding>=1.1.0",  # For BGE reranker
    # Kubernetes (K8s WorkerManager용) 지우면 동현이에게 혼남.
    "kubernetes>=31.0.0",
    "langchain-naver>=0.1.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
# Coverage 설정
addopts = """
    --cov=app
    --cov-report=html
    --cov-report=term-missing
    --cov-report=xml
    -v
"""
# 경고 무시
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/alembic/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
